--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+h1{
+    font-weight: 700;
+}
 img {
     width: 100%;
 }
@@ -11,8 +14,12 @@ span.fa{
 #alex .icons{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
+}
+
+#alex .icons a{
+    padding-right: 1rem;
 }
 
 #alex a{
